<resources>
    <string name="app_name">MovieAppStage2</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="movie_poster_desc">This is poster of the movie.</string>
    <string name="movie_title">Movie Title:</string>
    <string name="user_rating">User Rating:</string>
    <string name="plot_synopsis">Plot Synopsis:</string>
    <string name="release_date">Release Date:</string>
    <string name="author">Author:</string>
    <string name="content">Content:</string>
    <string name="reviews">Reviews:</string>
    <string name="image_btn_desc">This is a button for marking favorite movies.</string>
    <string name="userratingtextsample">User Rating</string>
    <string name="movie_title_text_sample">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="y_logo">This is youtube logo.</string>
    <string name="favorite">Favorite</string>
    <string name="topr">TOP_RATED</string>
    <string name="pop">POPULAR</string>
    <string name="fav">FAVORITE</string>
    <string name="nopos">No poster</string>
    <string name="notit">No original title</string>
    <string name="noover">No overview</string>
    <string name="nord">No release date</string>
    <string name="nointernet">No internet.Please check your network connection.</string>
    <string name="nofavmovie">No favorite movie. Add one!</string>
    <string name="ok">OK</string>
    <string name="error_cause">Cause of error is:</string>
    <string name="errorreview">Error for review is:</string>
    <string name="nodata">Data not available.</string>
    <string name="error">Error is:</string>
    <string name="nokey">No key available</string>
    <string name="noname">No name available</string>
    <string name="nocontent">No content available</string>
    <string name="noauthor">No author available</string>
    <string name="jsons">JSON</string>
    <string name="status">STATUS</string>
</resources>
